Add notebook support
